--- a/lib/app_web/controllers/page_html/home.html.heex
+++ b/lib/app_web/controllers/page_html/home.html.heex
@@ -8,7 +8,7 @@
   <p class="text-2xl text-center mt-2">Phoenix App</p>
   <div class="flex justify-center">
     <button 
-      class="bg-blue-500 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 transition-all duration-200 ease-in-out w-1/2 mt-6">
+      class="bg-blue-500 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 transition-all duration-200 ease-in-out w-1/2 md:w-1/6 mt-6">
       Let's go!
     </button>
   </div>
